@@ -1,5 +1,5 @@
 /*****************************************************************************\
- *  $Id: cerebrod_clusterlist_genders.c,v 1.18 2005-03-30 05:41:45 achu Exp $
+ *  $Id: cerebrod_clusterlist_genders.c,v 1.19 2005-04-02 00:36:52 achu Exp $
 \*****************************************************************************/
 
 #if HAVE_CONFIG_H
@@ -16,6 +16,7 @@
 
 #include <genders.h>
 
+#include "cerebro_defs.h"
 #include "cerebrod_clusterlist_module.h"
 
 #include "cerebrod_clusterlist.h"
@@ -115,8 +116,9 @@ genders_clusterlist_numnodes(void)
 int
 genders_clusterlist_node_in_cluster(char *node)
 {
-  int ret, free_flag = 0;
+  int ret;
   char *nodePtr = NULL;
+  char nodebuf[CEREBRO_MAXNODENAMELEN+1];
   char *clusterlist_module_name = cerebrod_clusterlist_module_name();
 
   assert(genders_handle);
@@ -126,10 +128,12 @@ genders_clusterlist_node_in_cluster(char *node)
   if (strchr(node, '.'))
     {
       char *p;
-      nodePtr = Strdup(node);
-      p = strchr(nodePtr, '.');
+
+      memset(nodebuf, '\0', CEREBRO_MAXNODENAMELEN+1);
+      strncpy(nodebuf, node, CEREBRO_MAXNODENAMELEN);
+      p = strchr(nodebuf, '.');
       *p = '\0';
-      free_flag++;
+      nodePtr = nodebuf;
     }
   else
     nodePtr = node;
@@ -139,9 +143,6 @@ genders_clusterlist_node_in_cluster(char *node)
 		      __FILE__, __FUNCTION__, __LINE__,
 		      clusterlist_module_name, 
 		      genders_errormsg(genders_handle));
-
-  if (free_flag)
-    Free(nodePtr);
 
   return ret;
 }
