@@ -1,5 +1,5 @@
 /*****************************************************************************\
- *  $Id: cerebrod_dynamic_modules.c,v 1.2 2005-03-30 05:41:45 achu Exp $
+ *  $Id: cerebrod_dynamic_modules.c,v 1.3 2005-04-02 00:36:52 achu Exp $
 \*****************************************************************************/
 
 #if HAVE_CONFIG_H
@@ -46,7 +46,7 @@ char *dynamic_clusterlist_modules[] = {
   "cerebrod_clusterlist_gendersllnl.la",
   "cerebrod_clusterlist_genders.la",
   "cerebrod_clusterlist_none.la",
-  "cerebrod_clusterlist_hostfile.la",
+  "cerebrod_clusterlist_hostsfile.la",
   NULL
 };
 int dynamic_clusterlist_modules_len = 4;
